# kuwenta

./: .env.example  .gitignore  DEPLOY.md  PLAN.md  PRD.md  README.md  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 46d6b352c53c_initial.py  512f17311ca2_initial.py
backend/app/: config.py  db.py  main.py
backend/app/api/: accounts.py  admin.py  auth.py  budgets.py  categories.py  imports.py  insights.py  qa.py  receipts.py  transactions.py
backend/app/core/: deps.py  security.py
backend/app/jobs/: scheduler.py
backend/app/llm/: base.py  rate_limit.py  router.py  tracer.py
backend/app/models/: __init__.py  _common.py  account.py  budget.py  category.py  insight.py  llm_call.py  receipt.py  transaction.py  user.py
backend/app/schemas/: accounts.py  admin.py  auth.py  budgets.py  categories.py  imports.py  insights.py  qa.py  receipts.py  transactions.py
backend/app/services/: accounts.py  anomaly.py  budgets.py  categories.py  categorization.py  csv_import.py  insights.py  ocr.py  qa.py  seed.py  (+2 more)
backend/evals/: README.md  _common.py  eval_categorization.py  eval_insights.py  eval_ocr.py  eval_qa.py
backend/scripts/: smoke_gemini.py
backend/tests/: conftest.py  test_admin.py  test_anomaly.py  test_auth.py  test_budgets.py  test_categorization.py  test_csv_import.py  test_finance_tools.py  test_insights.py  test_ocr.py  test_parse_quickadd.py  test_periods.py  test_qa.py  test_rate_limit.py  test_security.py  test_seed.py  test_tracer.py  test_user_scope.py
(+63 files in other folders)
